k8s/ovh/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: staging-noindex
spec:
  headers:
    customResponseHeaders:
      X-Robots-Tag: "noindex, nofollow, noarchive"
