k8s/ovh/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: site-saletesincere
  labels:
    app.kubernetes.io/name: site-saletesincere
    app.kubernetes.io/part-of: site-saletesincere
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/warn: restricted
