k8s/ovh/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: site-saletesincere-staging
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: site-saletesincere-https-redirect@kubernetescrd,site-saletesincere-staging-noindex@kubernetescrd
spec:
  ingressClassName: public
  rules:
    - host: staging.saletesincere.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: site-saletesincere
                port:
                  name: http
  tls:
    - hosts:
        - staging.saletesincere.fr
      secretName: site-saletesincere-staging-tls
